--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -19,6 +19,12 @@ jobs:
           distribution: 'adopt'
           java-version: '17'
 
+      - name: Donner des permissions d'exécution au script Gradle
+        run: chmod +x gradlew
+
+      - name: Construction de l'application Spring Boot
+        run: ./gradlew build --no-daemon -x test  # Exclude the 'test' task
+
       - name: Construction de l'image Docker
         run: docker build -t siyourself/csa-backend:latest .
 
